--- a/index.html
+++ b/index.html
@@ -2,59 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Chat App Home</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav {
-      background-color: #333;
-      color: white;
-      padding: 10px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    nav h1 {
-      margin: 0;
-      font-size: 20px;
-    }
-
-    nav button {
-      background-color: #007bff;
-      color: white;
-      padding: 8px 15px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 14px;
-    }
-
-    nav button:hover {
-      background-color: #0056b3;
-    }
-
-    .content {
-      padding: 20px;
-    }
-  </style>
+  <title>Home</title>
 </head>
 <body>
-
-  <nav>
-    <h1>Welcome to ChatApp</h1>
-    <button onclick="location.href='/gallery.html'">Movie Picker</button>
+  <nav style="padding: 10px; background: #eee;">
+    <button onclick="window.location.href='/gallery'">Movie Picker</button>
   </nav>
-
-  <div class="content">
-    <h2>Home Page</h2>
-    <p>This is the main landing page for your Chat App.</p>
-    <p>Click "Movie Picker" to go to the image gallery and voting page.</p>
-  </div>
-
+  <h1>Welcome to the Home Page</h1>
 </body>
 </html>
