--- a/index.html
+++ b/index.html
@@ -4,13 +4,34 @@
   <meta charset="UTF-8" />
   <title>Chat App</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    #chat { max-width: 600px; margin: 50px auto; }
-    #messages { list-style: none; padding: 0; height: 300px; overflow-y: scroll; border: 1px solid #ccc; }
-    #messages li { padding: 8px 10px; }
-    #form { display: flex; margin-top: 10px; }
-    #input { flex: 1; padding: 10px; border: 1px solid #ccc; }
-    #sendBtn { padding: 10px; background-color: #28a745; color: white; border: none; }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #ece5dd; }
+    #chat { max-width: 600px; margin: 50px auto; background: #fff; border-radius: 10px; padding: 20px; }
+    #messages { list-style: none; padding: 0; height: 400px; overflow-y: scroll; border: 1px solid #ccc; background: #f9f9f9; margin-bottom: 10px; display: flex; flex-direction: column; gap: 5px; }
+
+    .message {
+      max-width: 70%;
+      padding: 10px;
+      border-radius: 15px;
+      margin: 5px;
+      word-wrap: break-word;
+    }
+
+    .sent {
+      background-color: #dcf8c6;
+      align-self: flex-end;
+      border-bottom-right-radius: 0;
+    }
+
+    .received {
+      background-color: #ffffff;
+      align-self: flex-start;
+      border-bottom-left-radius: 0;
+    }
+
+    #form { display: flex; }
+    #input { flex: 1; padding: 10px; border: 1px solid #ccc; border-radius: 20px; }
+    #sendBtn { padding: 10px 20px; margin-left: 10px; border: none; border-radius: 20px; background-color: #128c7e; color: white; cursor: pointer; }
+    #sendBtn:hover { background-color: #075e54; }
   </style>
 </head>
 <body>
@@ -30,17 +51,29 @@
     const input = document.getElementById('input');
     const messages = document.getElementById('messages');
 
+    const userId = Math.random().toString(36).substring(2, 10); // Temporary unique ID for this session
+
     form.addEventListener('submit', (e) => {
       e.preventDefault();
-      if (input.value) {
-        socket.emit('chat message', input.value);
+      if (input.value.trim()) {
+        const message = {
+          text: input.value,
+          senderId: userId,
+        };
+        socket.emit('chat message', message);
         input.value = '';
       }
     });
 
     socket.on('chat message', (msg) => {
       const li = document.createElement('li');
-      li.textContent = msg;
+      li.classList.add('message');
+      if (msg.senderId === userId) {
+        li.classList.add('sent');
+      } else {
+        li.classList.add('received');
+      }
+      li.textContent = msg.text;
       messages.appendChild(li);
       messages.scrollTop = messages.scrollHeight;
     });
